# llmdemo

./: pyproject.toml
src/llmdemo/: __init__.py  __main__.py  prompt.py
